# esp32-W5500_W5100S

./: .gitignore  README.md
W5100S_Test/: CMakeLists.txt  sdkconfig  sdkconfig.old
W5100S_Test/main/: CMakeLists.txt  W5100S_Test_main.c  wizchip_conf.c  wizchip_conf.h
W5100S_Test/main/Application/loopback/: loopback.c
W5100S_Test/main/W5100S/: w5100s.c
W5100S_Test/main/W5500/: w5500.c
